<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch.Vertical.Common"
    tools:context=".business.login.LoginActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_header_bar_height">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_header_bar_height"
            android:id="@+id/main_toolbar"
            app:title="@string/login"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:background="@drawable/border_corner_all"
        android:layout_margin="@dimen/common_margin"
        style="@style/MatchWrap.Vertical">
        <EditText android:id="@+id/login_et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line_height"
            android:background="@null"
            android:paddingLeft="@dimen/common_padding_small"
            android:hint="@string/input_phone"
            android:drawableLeft="@drawable/icon_user_name"
            android:drawablePadding="@dimen/common_padding_small"
            android:inputType="phone"/>
        <View style="@style/DividerFixedHeight"/>
        <EditText android:id="@+id/login_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line_height"
            android:background="@null"
            android:paddingLeft="@dimen/common_padding_small"
            android:hint="@string/input_pwd"
            android:drawableLeft="@drawable/icon_pwd"
            android:drawablePadding="@dimen/common_padding_small"
            android:inputType="textPassword"/>
    </LinearLayout>
    <Button
        android:id="@+id/login_btn_login"
        style="@style/FullBtnStyle"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/login_tv_forget_pwd"
        style="@style/WrapWrap"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/common_margin"
        android:text="@string/forget_pwd"/>
    <Button
        android:id="@+id/login_btn_register"
        style="@style/FullBtnStyle"
        android:enabled="true"
        android:text="@string/register"/>
</LinearLayout>